# sumsub-webhook-cli

./: Cargo.toml  README.md
src/: cli.rs  main.rs  sender.rs  signer.rs
src/payload/: custom.rs  mod.rs  predefined.rs
